# Smart_Zone

./: .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  README_API_UI.md  readme_zhTW.md  requirements.txt
.cursor/plans/: advanced.plan.md  b.plan.md  cursor.plan.md  scholarshipops_backend_api_and_react_ui_981f3623.plan.md  scrapper.plan.md  (+1 more)
Config/: profile.yaml  rules.yaml
agent_skills/: AGENTS.md  install_agent_skills.sh
container/: .env.example  Dockerfile  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
scripts/: build_sources.py  generate_sources.py  generate_sources_complete.py  remind.py
scripts/search_scholarships/: Cargo.toml
scripts/search_scholarships/src/: api_discovery.rs  browser_queue.rs  discovery.rs  effort.rs  extraction_fallbacks.rs  filter.rs  js_detector.rs  lib.rs  link_health.rs  main.rs  normalize.rs  notify.rs  rules.rs  sorter.rs  source_health.rs  storage.rs  triage.rs  types.rs  url_state.rs
scripts/search_scholarships/src/scrapers/: government.rs  mod.rs  selenium.rs  third_party.rs  university.rs
scripts/search_scholarships/tests/: README.md  fixtures.json  integration_test.rs
scripts/search_scholarships/tests/fixtures/: disability_only.html  home_fee_only.html  international_eligible.html  phd_only.html  taiwan_excluded.html
tasks/: daily_2026-01-18_to_02-10.yml  deadlines.yml  phases_2026-02-11_to_06-01.yml
tracking/: criteria.yml  leads.json  source_health.json  sources.yml
web-UI/: README.md  index.html  package-lock.json  package.json
(+377 files in other folders)
